<resources>
    <string name="app_name">ShopifyMatchingGame</string>
    <string name="cards_found">%1$s/%2$s</string>
    <string name="shopify_logo">Shopify Logo</string>
    <string name="trophy">Trophy</string>
    <string name="back_button">Back button</string>
    <string name="cardfaceup">Card Face Up</string>
    <string name="cardfacedown">Card Face Down</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="congratulations">Congratulations, You Won!</string>
    <string name="home">Home</string>

    <string-array name="card_matches_settings_list_titles">
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
    </string-array>

    <string-array name="card_matches_settings_list_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="grid_size_settings_list_titles">
        <item>"10"</item>
        <item>"12"</item>
        <item>"14"</item>
    </string-array>

    <string-array name="grid_size_settings_list_values">
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
</resources>
